# Game_Ugolki

./: Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  Game.cpp  Game.h  IO.cpp  IO.h  README.md  allMove.cpp  allMove.h  main.cpp
